Full bleed and homepage stage shadow over image update, bug fixes for text stage, and news article.

--- a/ui.frontend/src/main/webpack/components/fullbleed/_fullbleed.scss
+++ b/ui.frontend/src/main/webpack/components/fullbleed/_fullbleed.scss
@@ -14,6 +14,18 @@
         background-position: center;
         display: flex;
         align-items: center;
+        position: relative;
+        &:after{
+            content: '\A';
+            position: absolute;
+            width: 100%; 
+            height:100%;
+            top:0; 
+            left:0;
+            opacity: 0.8;
+            background: radial-gradient(circle at 50% 0, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2) 59%);;
+            z-index: 1;
+        }
 
         &__image {
             position: relative;
@@ -32,6 +44,8 @@
             justify-content: center;
             color: #fff;
             text-align: center;
+            position: relative;
+            z-index: 2;
         }
 
         &__headline {
