--- a/ui.frontend/src/main/webpack/components/navigation/_navigation.scss
+++ b/ui.frontend/src/main/webpack/components/navigation/_navigation.scss
@@ -522,7 +522,6 @@ header.experiencefragment{
     }
     .navigation {
         .header {
-            box-shadow: none;
             &_burger-menu {
                 display: block;
 
